<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZeroMQTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_publisher">Create Publisher</string>
	<string name="create_subscriber">Create Subscriber</string>
	<string name="publish_message">Publish Message</string>
	<string name="start_listening">Start Receiving Message</string>
	<string name="start_sub_service">Start Subscribing Service</string>
	<string name="stop_sub_service">Stop Subscribing Service</string>
	<string name="default_url">192.168.1.1</string>
	<string name="default_port">2013</string>
</resources>